--- a/assets/web/page.ejs
+++ b/assets/web/page.ejs
@@ -5,9 +5,7 @@
     <title>App</title>
   </head>
   <body>
-    <h1> Top </h1>
-    <div id="app">....</div>
-    <h1> Bottom </h1>
+    <div id="app"></div>
     <script src="app.js"></script>
   </body>
 </html>
