--- a/assets/web/page.ejs
+++ b/assets/web/page.ejs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>App</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/antd/4.3.0/antd.compact.min.css"/>
   </head>
   <body>
     <div id="app"></div>
