added static support

--- a/assets/web/page.tmpl
+++ b/assets/web/page.tmpl
@@ -2,11 +2,13 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>App11</title>
+    <title>Carmel</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/antd/4.3.0/antd.compact.min.css"/>
   </head>
   <body>
-    <div id="app"></div>
-    <script src="/app.js"></script>
+    <div id="app">      
+      {{prerender}}
+    </div>
   </body>
 </html>
