--- a/assets/web/page.tmpl
+++ b/assets/web/page.tmpl
@@ -2,11 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Carmel</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/antd/4.5.4/antd.compact.min.css" integrity="sha512-w2AeZSO5IW6FZcDEr0NkqFsPydyrVDcmWR0BARsadSUlkTaEuzApDe7jQDmk5btfnutiY0kAI8w+XjLHo9WF0g==" crossorigin="anonymous" />
+    <title>Carmel2</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/antd/4.11.2/antd.min.css" integrity="sha512-gs6VDTwxBRKAfKFQbN+UR2wCkNoFnPrvLcsEwGtzDDG1Wuwx5w/UhjsnMwm27En67jU0M04ofj8IIctaBmaU+A==" crossorigin="anonymous" />
   </head>
   <body>
-    <div id="app">      
-    </div>
+    <div id="app"/>      
   </body>
 </html>
