--- a/assets/web/page.tmpl
+++ b/assets/web/page.tmpl
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Carmel</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/antd/4.11.2/antd.min.css" integrity="sha512-gs6VDTwxBRKAfKFQbN+UR2wCkNoFnPrvLcsEwGtzDDG1Wuwx5w/UhjsnMwm27En67jU0M04ofj8IIctaBmaU+A==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://unpkg.com/react-quill@1.3.3/dist/quill.snow.css">
   </head>
   <body>
     <div id="app"/>      
